+tasklist & filtre des résultats

--- a/demo-react-04/demo-react-04/src/index.css
+++ b/demo-react-04/demo-react-04/src/index.css
@@ -76,7 +76,7 @@ button:focus-visible {
   }
 }
 
-label::after {
+form > label::after {
   content: ':';
   margin-left: 0.5ch;
   margin-right: 0.5ch;
